[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-connector"
version = "0.1.0"
description = "Shared LLM routing, logging, recovery (MySQL-backed)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0",
  "requests>=2.28",
  "mysql-connector-python>=8.0",
  "httpx>=0.24",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.22", "python-dotenv>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_connector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
